--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,12 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로그인</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}
+    로그인
+{% endblock %}
+{% block content %}
+    <div class="container">
+        <div class="wrap">
+            <h2 class="title-center"> 로그인</h2>
+            <form class="form-area">
+                <div class="form-group mt-2 mb-2">
+                    <label for="username">아이디</label>
+                    <input type="text" class="form-control" id="username" name="username">
+                </div>
+                <div class="form-group mt-2 mb-2">
+                    <label for="password">비밀번호</label>
+                    <input type="password" class="form-control" id="password" name="password">
+                </div>
+                <hr>
+                <div style="float: right">
+                    <button type="submit" class="btn btn-primary">로그인</button>
+                    <a href="/sign-up" class="btn btn-secondary">회원가입 페이지로</a>
+                </div>
+            </form>
+
+        </div>
+    </div>
+{% endblock %}
