--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,7 +15,7 @@
             </div>
             <div class="form-group mt-2 mb-2">
                 <label for="bio">닉네임</label>
-                <input type="text" class="form-control" id="bio" name="nickname">
+                <input type="text" class="form-control" id="nickname" name="nickname">
             </div>
             <div class="form-group mt-2 mb-2">
                 <label for="password">비밀번호</label>
@@ -25,10 +25,14 @@
                 <label for="password2">비밀번호 확인</label>
                 <input type="password" class="form-control" id="password2" name="password2">
             </div>
+            {% if error %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endif %}
             <hr>
             <div style="float: right">
                 <button type="submit" class="btn btn-primary">회원가입</button>
-                <a href="/sign-in" class="btn btn-secondary">로그인 페이지로</a>
             </div>
         </form>
 
