--- a/templates/base.html
+++ b/templates/base.html
@@ -4,67 +4,186 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %} | Ladder to Wine</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-        crossorigin="anonymous"></script>
-    <style>
-        .title-center {
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        .wrap {
-            width: 400px;
-            margin: 0 auto;
-        }
-
-        .form-area {
-            margin-top: 25px;
-        }
-
-        .timeline-container {
-            margin-top: 25px
-        }
-    </style>
+    
 </head>
+<style>
+    /* @import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css'); */
+    @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 100;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.otf) format('opentype');}
+    @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 300;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.otf) format('opentype');} @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 400;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.otf) format('opentype');} @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 500;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.otf) format('opentype');} @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 700;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.otf) format('opentype');} @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 900;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.otf) format('opentype');}
 
+    .container{
+        position: fixed;
+        width: 100%;
+        min-height: 65px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color:#ffffff;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size:cover;
+    }
+    .logo{
+        margin-left: 20px;
+    }
+    .wrap{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        height: 300px;
+        width: 400px;
+        margin: -200px 0 0 -200px;
+    }
+    #search{
+        text-align: center;
+        width: 300px;
+        height: 30px;
+        font-size: 20px;
+    }
+    footer{
+        position : fixed;
+        bottom: 0;
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 10px;
+    }
+
+
+
+    body{
+           margin:0 auto;
+    }
+    /* body, table, div, p ,span{font-family:'Nanum Gothic';} */
+    body, table, div, p ,span{font-family:'Noto Sans KR';}
+        
+    a{
+        text-decoration: none;
+        color:#333;
+    }
+    #con{
+        width:100%;
+        height: 100vh;
+        background-color:#ffffff;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size:cover;
+        padding:0;
+    }
+    #login{
+        width:600px;
+        height: 600px;
+        margin:0 auto;
+        /* position: relative; */
+        /* background:#ddd; */
+    }
+    #login_form{
+    /* text-align:center; */
+        border-radius: 10px;
+        padding:50px;
+        background: #fff2d0;
+        text-align: center;
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform: translate(-50%, -50%);
+    }
+    .login{
+        font-size:25px;
+        font-weight: 900;
+        color:#333;
+    }
+
+    .size{
+        width:300px;
+        height:30px;
+        padding-left:10px;
+        background-color: #f4f4f4;
+        /* margin-left:10px; */
+        border:none;
+        border-radius: 5px;
+    }
+
+    .btn{
+        width:310px;
+        height: 40px;
+        font-size:15px;
+        background-color: #df3278;
+        color:#fff;
+        border:none;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+    .btn:hover{
+        background:#ca296a;
+    }
+    hr{
+        margin-top:20px;
+        background:#eee;           
+    }
+    .find{
+        color:#ddd;
+        font-size:12px;
+    }
+    .find span{
+        padding-left:10px;
+    }
+    .find span::before{
+        content:'|';
+        color:#333;
+        padding-right: 10px;
+    }
+    .find span:nth-child(1):before{
+        content:none;
+    } 
+    .find span:nth-child(1){
+        padding-left:0px;
+    } 
+    .find a:hover{
+        color:#707070;
+    }
+</style>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav>
         <div class="container">
-            <a class="navbar-brand" href="/sign-in/">Ladder to Wine</a>
-            <form class="form-inline my-2 my-lg-0">
-                {% if not user.is_authenticated %}
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/sign-in"> Sign In <span class="sr-only"></span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/sign-up"> Sign Up <span class="sr-only"></span></a>
-                    </li>
-                </ul>
-                {% else %}
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item disabled">
+            <div>
+                <a class="logo" href="/sign-in/">Ladder to Wine</a>
+            </div>
+            <div class="search-bar">
+                <input type="text" placeholder="와인 검색" id="search" name="search" >
+            </div>
+            <div>
+                <form>
+                    {% if not user.is_authenticated %}
+                    <div>
+                        <div>
+                            <a class="nav-link" href="/sign-in"> Sign In <span class="sr-only"></span></a>
+                        </div>
+                    </div>
+                    {% else %}
+                    <div>
                         <span class="nav-link">
                             {{ user.nickname }} 님 반갑습니다.
                         </span>
-                    </li>
-                    <li class="nav-item active">
+                    </div>
+                    <div>
                         <a class="nav-link" href="/logout"> 로그아웃 </a>
-                    </li>
-                </ul>
-                {% endif %}
-            </form>
+                    </div>
+                    {% endif %}
+                </form>
+            </div>
         </div>
     </nav>
     {% block content %}
 
     {% endblock %}
-
+    
+    <footer>
+        <nav>
+            <div>
+                <span>LADDER BUSINESS PLATFORM Copyright © Ladder Corp. All Rights Reserved.</span>
+            </div>
+        </nav>
+    </footer>
 </body>
 
 </html>
