--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,33 +1,47 @@
 {% extends 'base.html' %}
 
 {% block title %}
-    로그인
+로그인
 {% endblock %}
 {% block content %}
-    <div class="container">
-        <div class="wrap">
-            <h2 class="title-center"> 로그인</h2>
-            <form class="form-area" method="post" action="/sign-in/">
+<div id="con">
+    <div id="login">
+        <div id="login_form">
+            <!--로그인 폼-->
+            <form method="post" action="/sign-in/">
                 {% csrf_token %}
-                <div class="form-group mt-2 mb-2">
-                    <label for="username">아이디</label>
-                    <input type="text" class="form-control" id="username" name="username">
-                </div>
-                <div class="form-group mt-2 mb-2">
-                    <label for="password">비밀번호</label>
-                    <input type="password" class="form-control" id="password" name="password">
-                </div>
-                {% if error %}
-                    <div class="alert alert-danger" role="alert">
-                        {{ error }}
-                    </div>
-                {% endif %}
+                <h3 class="login" style="letter-spacing:-1px;">Ladder to Wine</h3>
                 <hr>
-                <div style="float: right">
-                    <button type="submit" class="btn btn-primary">로그인</button>
-                </div>
-            </form>
+                <label>
+                    <!-- <span>ID</span> -->
+                    <p style="text-align: left; font-size:12px; color:#666">Username</p>
+                    <input type="text" placeholder="아이디를 입력" id="username" name="username" class="size">
+                    <!-- <input type="submit" value="확인"> -->
+                    <p></p>
+                </label>
 
+                <label>
+                    <!-- <span>PW</span> -->
+                    <p style="text-align: left; font-size:12px; color:#666">Password </p>
+                    <input type="password" placeholder="비밀번호를 입력" id="password" name="password" class="size">
+                    <!-- <input type="submit" value="확인"> -->
+                </label>
+                {% if error %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+                {% endif %}
+                <p>
+                    <input type="submit" value="로그인" class="btn">
+                </p>
+            </form>
+            <hr>
+            <p class="find">
+                <span><a href="">아이디 찾기</a></span>
+                <span><a href="">비밀번호 찾기</a></span>
+                <span><a href="/sign-up">회원가입</a></span>
+            </p>
         </div>
-    </div>
+    <div>
+</div>
 {% endblock %}
