--- a/templates/base.html
+++ b/templates/base.html
@@ -4,29 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %} | Ladder to Wine</title>
-    
+
 </head>
 <style>
-    /* @import url('http://fonts.googleapis.com/earlyaccess/nanumgothic.css'); */
-    @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 100;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.otf) format('opentype');}
-    @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 300;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.otf) format('opentype');} @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 400;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.otf) format('opentype');} @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 500;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.otf) format('opentype');} @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 700;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.otf) format('opentype');} @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 900;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.otf) format('opentype');}
-
-    .container{
+    .container {
         position: fixed;
         width: 100%;
         min-height: 65px;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background-color:#ffffff;
+        background-color: #ffffff;
         background-position: center center;
         background-repeat: no-repeat;
-        background-size:cover;
+        background-size: cover;
     }
-    .logo{
+
+    .logo {
         margin-left: 20px;
     }
-    .wrap{
+
+    .wrap {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -34,14 +32,16 @@
         width: 400px;
         margin: -200px 0 0 -200px;
     }
-    #search{
+
+    #search {
         text-align: center;
         width: 300px;
         height: 30px;
         font-size: 20px;
     }
-    footer{
-        position : fixed;
+
+    footer {
+        position: fixed;
         bottom: 0;
         width: 100%;
         margin: 0 auto;
@@ -50,98 +50,118 @@
 
 
 
-    body{
-           margin:0 auto;
+    body {
+        margin: 0 auto;
     }
+
     /* body, table, div, p ,span{font-family:'Nanum Gothic';} */
-    body, table, div, p ,span{font-family:'Noto Sans KR';}
-        
-    a{
-        text-decoration: none;
-        color:#333;
+    body,
+    table,
+    div,
+    p,
+    span {
+        font-family: 'Noto Sans KR';
     }
-    #con{
-        width:100%;
+
+    a {
+        text-decoration: none;
+        color: #333;
+    }
+
+    #con {
+        width: 100%;
         height: 100vh;
-        background-color:#ffffff;
+        background-color: #ffffff;
         background-position: center center;
         background-repeat: no-repeat;
-        background-size:cover;
-        padding:0;
+        background-size: cover;
+        padding: 0;
     }
-    #login{
-        width:600px;
+
+    #login {
+        width: 600px;
         height: 600px;
-        margin:0 auto;
+        margin: 0 auto;
         /* position: relative; */
         /* background:#ddd; */
     }
-    #login_form{
-    /* text-align:center; */
+
+    #login_form {
+        /* text-align:center; */
         border-radius: 10px;
-        padding:50px;
+        padding: 50px;
         background: #fff2d0;
         text-align: center;
         position: absolute;
-        top:50%;
-        left:50%;
+        top: 50%;
+        left: 50%;
         transform: translate(-50%, -50%);
     }
-    .login{
-        font-size:25px;
+
+    .login {
+        font-size: 25px;
         font-weight: 900;
-        color:#333;
+        color: #333;
     }
 
-    .size{
-        width:300px;
-        height:30px;
-        padding-left:10px;
+    .size {
+        width: 300px;
+        height: 30px;
+        padding-left: 10px;
         background-color: #f4f4f4;
         /* margin-left:10px; */
-        border:none;
+        border: none;
         border-radius: 5px;
     }
 
-    .btn{
-        width:310px;
+    .btn {
+        width: 310px;
         height: 40px;
-        font-size:15px;
+        font-size: 15px;
         background-color: #df3278;
-        color:#fff;
-        border:none;
+        color: #fff;
+        border: none;
         cursor: pointer;
         border-radius: 5px;
     }
-    .btn:hover{
-        background:#ca296a;
+
+    .btn:hover {
+        background: #ca296a;
     }
-    hr{
-        margin-top:20px;
-        background:#eee;           
+
+    hr {
+        margin-top: 20px;
+        background: #eee;
     }
-    .find{
-        color:#ddd;
-        font-size:12px;
+
+    .find {
+        color: #ddd;
+        font-size: 12px;
     }
-    .find span{
-        padding-left:10px;
+
+    .find span {
+        padding-left: 10px;
     }
-    .find span::before{
-        content:'|';
-        color:#333;
+
+    .find span::before {
+        content: '|';
+        color: #333;
         padding-right: 10px;
     }
-    .find span:nth-child(1):before{
-        content:none;
-    } 
-    .find span:nth-child(1){
-        padding-left:0px;
-    } 
-    .find a:hover{
-        color:#707070;
+
+    .find span:nth-child(1):before {
+        content: none;
+    }
+
+    .find span:nth-child(1) {
+        padding-left: 0px;
+    }
+
+    .find a:hover {
+        color: #707070;
     }
 </style>
+
 <body>
     <nav>
         <div class="container">
@@ -149,7 +169,7 @@
                 <a class="logo" href="/sign-in/">Ladder to Wine</a>
             </div>
             <div class="search-bar">
-                <input type="text" placeholder="와인 검색" id="search" name="search" >
+                <input type="text" placeholder="와인 검색" id="search" name="search">
             </div>
             <div>
                 <form>
@@ -176,7 +196,7 @@
     {% block content %}
 
     {% endblock %}
-    
+
     <footer>
         <nav>
             <div>
