Feat: main 페이지 랜덤 추천 기능 추가와 base 페이지 연결

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,3 +1,9 @@
+{% extends 'base.html' %}
+
+{% block title %}
+
+{% endblock %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,6 +16,14 @@
 
 <body>
     <h1>안녕하세요</h1>
+    {% for wine in wines %}
+    <p>{{ wine.name }}</p>
+    <p>{{ wine.year }}년</p>
+    <p>{{ wine.producer }}</p>
+    <p>{{ wine.price }} 원</p>
+    <br>
+    {% endfor %}
 </body>
 
 </html>
+{% endblock %}
