--- a/templates/user/my_wish.html
+++ b/templates/user/my_wish.html
@@ -14,9 +14,9 @@ My WISH
     </li>
 </ul>
 {% else %}
-<ul class="navbar-nav mr-auto">
-    <li class="nav-item disabled">
-        <span class="nav-link">
+<ul class="">
+    <li class="">
+        <span class="">
             {{ user.username }} 님 반갑습니다.
         </span>
     </li>
@@ -25,12 +25,12 @@ My WISH
 <form action="{% url 'users:get_wish' user.id %}" method="post">
     {% csrf_token %}
     {% for wine in wine_list %}
-    <div class="card">
-        <div class="card-body">
+    <div class="">
+        <div class="">
             <h5>{{ wine.name }}</h5>
             <h5>{{ wine.year }}</h5>
             <h5>{{ wine.price }}</h5>
-            <a href="{% url 'users:post_wish' wine.id %}" class="card-link">[팔로우 취소]</a>
+            <a href="{% url 'users:post_wish' id=wine.id code=2 %}" class="">[팔로우 취소]</a>
         </div>
     </div>
     <hr>
