--- a/templates/main.html
+++ b/templates/main.html
@@ -17,7 +17,7 @@
 <body>
     <h1>안녕하세요</h1>
     {% for wine in wines %}
-    <a>
+    <a href="{% url 'wines:wine_detail_view' wine.pk %}">
         <img src="https://{{ wine.img_url }}" width="200" alt="image place">
         <p>{{ wine.av_rating }}</p>
         <p>{{ wine.price }} 원</p>
