--- a/templates/base.html
+++ b/templates/base.html
@@ -33,34 +33,28 @@
         margin: -200px 0 0 -200px;
     }
 
-    #search {
+    #searched {
         text-align: center;
         width: 300px;
         height: 30px;
         font-size: 20px;
     }
+    .header-signin {
+        margin-right: 30px;
+    }
 
-    footer {
+    .footer-content {
         position: fixed;
         bottom: 0;
         width: 100%;
         margin: 0 auto;
         margin-bottom: 10px;
+        text-align: center;
     }
-
 
 
     body {
         margin: 0 auto;
-    }
-
-    /* body, table, div, p ,span{font-family:'Nanum Gothic';} */
-    body,
-    table,
-    div,
-    p,
-    span {
-        font-family: 'Noto Sans KR';
     }
 
     a {
@@ -168,25 +162,30 @@
             <div>
                 <a class="logo" href="/sign-in/">Ladder to Wine</a>
             </div>
-            <div class="search-bar">
-                <input type="text" placeholder="와인 검색" id="search" name="search">
-            </div>
+            <form method="post" action="{% url 'wines:search' %}">
+                {% csrf_token %}
+                <div class="search-bar">
+                    <input type="search" placeholder="와인 검색" aria-label="Search" id="searched" name="searched">
+                </div>
+
+            </form>
+            
             <div>
                 <form>
                     {% if not user.is_authenticated %}
                     <div>
                         <div>
-                            <a class="nav-link" href="/sign-in"> Sign In <span class="sr-only"></span></a>
+                            <a class="header-signin" href="/sign-in"> Sign In </a>
                         </div>
                     </div>
                     {% else %}
                     <div>
-                        <span class="nav-link">
+                        <a class="" href="/my">
                             {{ user.nickname }} 님 반갑습니다.
-                        </span>
+                        </a>
                     </div>
                     <div>
-                        <a class="nav-link" href="/logout"> 로그아웃 </a>
+                        <a class="" href="/logout"> 로그아웃 </a>
                     </div>
                     {% endif %}
                 </form>
@@ -199,7 +198,7 @@
 
     <footer>
         <nav>
-            <div>
+            <div class="footer-content">
                 <span>LADDER BUSINESS PLATFORM Copyright © Ladder Corp. All Rights Reserved.</span>
             </div>
         </nav>
