feat &  : dev_4.ver #1 - 찜 기능 추가 - 리뷰 목록 열람 기능 추가 - 로그인 회원가입 기능 - 상세페이지 기능 - index 기능 사용을 위한 구조 적용

--- a/templates/base.html
+++ b/templates/base.html
@@ -181,9 +181,9 @@
                     </div>
                     {% else %}
                     <div>
-                        <span class="nav-link">
-                            {{ user.nickname }} 님 반갑습니다.
-                        </span>
+                        <a href="/my"><span class="nav-link">
+                                {{ user.nickname }} 님 반갑습니다.
+                            </span></a>
                     </div>
                     <div>
                         <a class="nav-link" href="/logout"> 로그아웃 </a>
@@ -193,6 +193,10 @@
             </div>
         </div>
     </nav>
+    <br>
+    <br>
+    <br>
+    <hr>
     {% block content %}
 
     {% endblock %}
