--- a/templates/user/my_wish.html
+++ b/templates/user/my_wish.html
@@ -5,22 +5,7 @@ My WISH
 {% endblock %}
 {% block content %}
 {% if not user.is_authenticated %}
-<ul class="navbar-nav mr-auto">
-    <li class="nav-item active">
-        <a class="nav-link" href="/sign-in"> Sign In <span class="sr-only"></span></a>
-    </li>
-    <li class="nav-item active">
-        <a class="nav-link" href="/sign-up"> Sign Up <span class="sr-only"></span></a>
-    </li>
-</ul>
 {% else %}
-<ul class="">
-    <li class="">
-        <span class="">
-            {{ user.username }} 님 반갑습니다.
-        </span>
-    </li>
-</ul>
 <!-- 사용자 리스트 반복문 -->
 <form action="{% url 'users:get_wish' user.id %}" method="post">
     {% csrf_token %}
@@ -30,7 +15,7 @@ My WISH
             <h5>{{ wine.name }}</h5>
             <h5>{{ wine.year }}</h5>
             <h5>{{ wine.price }}</h5>
-            <a href="{% url 'users:post_wish' id=wine.id code=2 %}" class="">[팔로우 취소]</a>
+            <a href="{% url 'users:post_wish' id=wine.id code=2 %}" class="">[찜 취소]</a>
         </div>
     </div>
     <hr>
