feat &  : dev_5.ver #1 - static : css 임포트 적용

--- a/templates/user/my_home.html
+++ b/templates/user/my_home.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+<!-- CSS 불러오기 -->
+{% load static %}
 
 {% block title %}
 My HOME
@@ -35,4 +37,5 @@ My HOME
     최근 본 상품
 </div>
 {% endif %}
+
 {% endblock %}
