--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -1,12 +1,12 @@
-<form action="{% url 'wines:edit_review' review_id=review_id wine_id=wine_id %}" method="post">
+<form action="{% url 'wines:edit_review' review_id=review.id wine_id=wine.id %}" method="post">
     {% csrf_token %}
 <label for="rating">
     Rating
 </label>
-    <input type="number" step="0.1" name="rating" min="0" max="5" />
+    <input type="number" step="0.1" name="rating" min="0" max="5" value="{{ review.rating.rating }}"/>
 <label for="content">
     Review
 </label>
-    <input type="text" name="content" />
+<textarea name="content" cols="30" rows="5">{{ review.content }}</textarea>
 <button>Submit</button>
 </form>
