--- a/templates/edit_review.html
+++ b/templates/edit_review.html
@@ -1,3 +1,11 @@
+
+{% if messages %}
+{% for message in messages %}
+<div id="review-alert-msg">
+    {{ message.message }}
+</div>
+{% endfor %}
+{% endif %}
 <form action="{% url 'wines:edit_review' review_id=review.id wine_id=wine.id %}" method="post">
     {% csrf_token %}
 <label for="rating">
