feat : 기능 추가 및 프론트 수정 - 개인페이지 리뷰 수정 시 페이지 이동 수정(상세페이지 > 개인페이지) (해결) - 찜 기능 찜 리스트 이름 사진 불러오기 추가(해결) - 개인 페이지 프론트 수정

--- a/static/css/style-base.css
+++ b/static/css/style-base.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #ffffff;
+    background-color: #c6ba93;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -42,18 +42,18 @@ footer {
     margin-bottom: 10px;
 }
 
-body {
+.body {
     margin: 0 auto;
 }
 
 /* body, table, div, p ,span{font-family:'Nanum Gothic';} */
-body,
+/* body,
 table,
 div,
 p,
 span {
     font-family: 'Noto Sans KR';
-}
+} */
 
 a {
     text-decoration: none;
