--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <head>
     <!-- CSS불러오기 -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/style-my.css' %}"> -->
 
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %} | Ladder to Wine</title>
@@ -50,8 +51,8 @@
     <br>
     <br>
     <hr>
-    {% block content %}
 
+    {% block content %}
     {% endblock %}
 
     <footer class="footer">
