feat - 화면 로딩시 로딩페이지

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,3 +3,5 @@
 @import url("style-base.css");
 @import url("style-my.css");
 @import url("detail.css");
+@import url("loading.css");
+@import url("style-main.css");
