--- a/templates/search.html
+++ b/templates/search.html
@@ -6,21 +6,26 @@
 {% block content %}
 
     {% if searched %}
-        <br>
-        <br>
-        <div>
-            <h1> 검색하신 {{ searched }} 정보입니다. </h1>
+        <div class="search-content">
+            
+            
+            <div>
+                <h2> " {{ searched }} "가 포함된 와인을 검색하였습니다. </h2>
+            </div>
+            <br>
+            {% for WineModel in winename %}
+                <p>
+                    <a href="/wine/{{ WineModel.id }}">- {{ WineModel.name }} {{ WineModel.year}} </a> <br>
+                </p>
+            {% endfor %}
+            {% else %}
+            <div>
+                <br>
+                <br>
+                <h1> 찾고 있는 와인을 검색창에 입력해주세요. </h1>
+            </div>
         </div>
-        <br>
-        {% for WineModel in winename %}
-            <a href="/wine/{{ WineModel.id }}"> {{ WineModel.name }} </a> <br>
-        {% endfor %}
-    {% else %}
-        <div>
-            <br>
-            <br>
-            <h1> 찾고 있는 와인을 검색창에 입력해주세요. </h1>
-        </div>    
+            
     {% endif %}
 
 {% endblock %}
