Fix : css 분리 / footer height 지정

--- a/templates/search.html
+++ b/templates/search.html
@@ -6,20 +6,23 @@
 {% block content %}
 
     {% if searched %}
-        <div class="search-content">
-            
-            
+        <div>
             <div>
-                <h2> " {{ searched }} "가 포함된 와인을 검색하였습니다. </h2>
+                <div>
+                    <h2> " {{ searched }} "가 포함된 와인을 검색하였습니다. </h2>
+                </div>
+                <br>
+                {% for WineModel in winename %}
+                    <p>
+                        <a href="/wine/{{ WineModel.id }}" class="search-wine">- {{ WineModel.name }} {{ WineModel.year}} </a> <br>
+                    </p>
+                {% endfor %}
             </div>
-            <br>
-            {% for WineModel in winename %}
-                <p>
-                    <a href="/wine/{{ WineModel.id }}">- {{ WineModel.name }} {{ WineModel.year}} </a> <br>
-                </p>
-            {% endfor %}
+            <div class="search-height">
+                
+            </div>
             {% else %}
-            <div>
+            <div class="search-content">
                 <br>
                 <br>
                 <h1> 찾고 있는 와인을 검색창에 입력해주세요. </h1>
