--- a/static/css/style-base.css
+++ b/static/css/style-base.css
@@ -14,7 +14,9 @@
 .logo {
     margin-left: 20px;
 }
-
+.logo:hover {
+    box-shadow: 0 8px 8px 0 rgb(51 48 48 / 20%), 0 -8px 24px 0 rgb(234 224 218 / 30%);
+}
 .wrap {
     position: absolute;
     top: 50%;
@@ -24,22 +26,11 @@
     margin: -200px 0 0 -200px;
 }
 
-#searched {
-    align-items: center;
-    text-align: center;
-    width: 300px;
-    height: 30px;
-    font-size: 20px;
-}
-.search-btn {
-    margin-right: 50px;
-}
-
 footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     margin: 0 auto;
@@ -50,79 +41,9 @@ footer {
     margin: 0 auto;
 }
 
-/* body, table, div, p ,span{font-family:'Nanum Gothic';} */
-/* body,
-table,
-div,
-p,
-span {
-    font-family: 'Noto Sans KR';
-} */
-
 a {
     text-decoration: none;
     color: #333;
-}
-
-#con {
-    width: 100%;
-    /* height: 100vh; */
-    background-color: #ffffff;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 0;
-}
-
-#login {
-    width: 600px;
-    height: 600px;
-    /* margin: 0 auto; */
-    /* position: relative; */
-    /* background:#ddd; */
-}
-
-#login_form {
-    /* text-align:center; */
-    border-radius: 10px;
-    padding: 50px;
-    background: #fff2d0;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.login {
-    font-size: 25px;
-    font-weight: 900;
-    color: #333;
-}
-
-.size {
-    width: 300px;
-    height: 30px;
-    padding-left: 10px;
-    background-color: #f4f4f4;
-    /* margin-left:10px; */
-    border: none;
-    border-radius: 5px;
-}
-
-.btn {
-    width: 310px;
-    height: 40px;
-    font-size: 15px;
-    background-color: #df3278;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-.btn:hover {
-    background: #ca296a;
 }
 
 hr {
@@ -130,29 +51,6 @@ hr {
     background: #eee;
 }
 
-.find {
-    color: #ddd;
-    font-size: 12px;
-}
-
-.find span {
-    padding-left: 10px;
-}
-
-.find span::before {
-    content: '|';
-    color: #333;
-    padding-right: 10px;
-}
-
-.find span:nth-child(1):before {
-    content: none;
-}
-
-.find span:nth-child(1) {
-    padding-left: 0px;
-}
-
-.find a:hover {
-    color: #707070;
+.header-signin:hover {
+    box-shadow: 0 8px 8px 0 rgb(51 48 48 / 20%), 0 -8px 24px 0 rgb(234 224 218 / 30%);
 }
