--- a/static/css/style-my.css
+++ b/static/css/style-my.css
@@ -162,10 +162,10 @@
 .dh-mywish-card {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
 
-    width: 800px;
+    width: 1200px;
     min-height: 400px;
 
     margin: 15px;
@@ -189,7 +189,8 @@
 
 .dh-mywish-right {
     height: 300px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
+    margin: auto 0 auto 0;
 }
 
 .dh-mywish-right-img_box {
@@ -228,8 +229,18 @@
     font-weight: 600;
 }
 
+.dh-mywish-center {
+    width: 390px;
+    /* margin-top: 30px; */
+    margin: auto 0 auto 0;
+    padding: 5px;
+
+    font-weight: 500;
+}
+
 .dh-mywish-left {
-    margin-top: 30px;
+    /* margin-top: 30px; */
+    margin: auto 0 auto 0;
     padding: 5px;
 
     font-weight: 500;
@@ -238,6 +249,14 @@
 .dh-mywish-producer {
     font-size: 20px;
     color: rgb(121, 121, 121);
+}
+
+.dh-mywish-producer-semi {
+    font-size: 25px;
+    font-family: system-ui;
+    font-weight: 600;
+    color: rgb(121, 121, 121);
+    margin-bottom: 5px;
 }
 
 .dh-mywish-name {
@@ -277,4 +296,41 @@
 
 .dh-mywish-btn:hover {
     box-shadow: 0 8px 8px 0 rgb(51 48 48 / 20%), 0 -8px 24px 0 rgb(234 224 218 / 30%);
+}
+
+/*  */
+/*  */
+/* 와인카드 찜하기 별 */
+.dh-mywish-review-rating-star {
+    float: right;
+    margin-top: 20px;
+
+
+}
+
+.dh-mywish-review-rating-star-img-sg {
+    width: 50px;
+    height: 50px;
+}
+
+.dh-mywish-review-rating-sg {
+    /* color: #a26f01; */
+    box-sizing: border-box;
+    /* background-color: #f9f7d6; */
+    border-radius: 24px;
+    /* box-shadow: 0 0 0 1px rgb(87 87 87 / 10%), 0 8px 8px 0 rgb(234 224 218 / 30%); */
+    align-items: center;
+    display: inline-block;
+    vertical-align: middle;
+    padding: 4px 8px;
+    margin-right: 15px;
+}
+
+.dh-mywish-review-rating-sg:hover {
+    /* border: 1px solid rgb(211, 211, 211); */
+    box-shadow: 0 8px 8px 0 rgb(51 48 48 / 20%), 0 -8px 24px 0 rgb(234 224 218 / 30%);
+}
+
+.dh-mywish-review-rating-star button {
+    all: unset;
 }
