Fix : class name 변경

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -48,7 +48,7 @@
             </div>
             {% endif %}
             <p>
-                <button type="submit" class="btn btn-primary">회원가입</button>
+                <button type="submit" class="sign-btn btn-primary">회원가입</button>
             </p>
         </form>
 
