--- a/static/css/style-base.css
+++ b/static/css/style-base.css
@@ -1,4 +1,4 @@
-.container {
+.base-container {
     /* position: fixed; */
     width: 100%;
     min-height: 65px;
@@ -16,14 +16,6 @@
 }
 .logo:hover {
     box-shadow: 0 8px 8px 0 rgb(51 48 48 / 20%), 0 -8px 24px 0 rgb(234 224 218 / 30%);
-}
-.wrap {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    height: 300px;
-    width: 400px;
-    margin: -200px 0 0 -200px;
 }
 
 footer {
