--- a/static/css/style-sign.css
+++ b/static/css/style-sign.css
@@ -58,7 +58,7 @@
     border-radius: 5px;
 }
 
-.btn {
+.sign-btn {
     width: 310px;
     height: 40px;
     font-size: 15px;
@@ -69,7 +69,7 @@
     border-radius: 5px;
 }
 
-.btn:hover {
+.sign-btn:hover {
     background: #ca296a;
 }
 
