--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 
 <body>
     <nav>
-        <div class="container">
+        <div class="base-container">
             <div>
                 <a class="logo" href="{% url 'wines:home' %}"">Ladder to Wine</a>
             </div>
