--- a/templates/signin.html
+++ b/templates/signin.html
@@ -31,7 +31,7 @@
             </div>
             {% endif %}
             <p>
-                <input type="submit" value="로그인" class="btn">
+                <input type="submit" value="로그인" class="sign-btn">
             </p>
         </form>
         <hr>
