--- a/templates/user/my_review.html
+++ b/templates/user/my_review.html
@@ -7,7 +7,7 @@ My REVIEW
 {% if not user.is_authenticated %}
 {% else %}
 <!-- 사용자 리스트 반복문 -->
-
+<div class="review-content">
     {% for review in review_list %}
     {% load index %}
     <a href="/wine/{{ wine.id }}">{{ review.wine.name }}</a>
@@ -56,4 +56,6 @@ My REVIEW
     {% endfor %}
 </form>
 {% endif %}
+</div>
+    
 {% endblock %}
